--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,9 @@ jobs:
         uses: styfle/cancel-workflow-action@0.9.0
         with:
           access_token: ${{ github.token }}
-      - name: Checkout
-        uses: actions/checkout@v2
-        uses: pnpm/actions-setup@v2
-        with: 
+      - uses: actions/checkout@v2
+      - uses: pnpm/actions-setup@v2
+        with:
           version: 7
       - name: Setup Node
         uses: actions/setup-node@v3
