--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           access_token: ${{ github.token }}
       - uses: actions/checkout@v2
-      - uses: pnpm/actions-setup@v2
+      - uses: pnpm/action-setup@v2
         with:
           version: 7
       - name: Setup Node
