--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
           version: 7
       - uses: actions/setup-node@v3
         with:
-          node-version: "14.x"
+          node-version: "22.4.0"
           cache: "pnpm"
       - run: pnpm install --frozen-lockfile
       - name: Create Release Pull Request or Publish
